--- a/raspberry/.air.toml
+++ b/raspberry/.air.toml
@@ -5,16 +5,16 @@ tmp_dir = "tmp"
 [build]
   args_bin = []
   bin = "tmp/main.exe"
-  cmd = "go build -o ./tmp/main.exe ./main"
+  cmd = "templ generate && go build -o ./tmp/main.exe ./main"
   delay = 1000
   exclude_dir = ["webServer/static", "tmp", "vendor"]
   exclude_file = []
-  exclude_regex = ["_test.go"]
+  exclude_regex = ["_test.go", ".*_templ.go",]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "html", "css", "js"]
+  include_ext = ["go", "tpl", "tmpl", "templ", "html"]
   include_file = []
   kill_delay = "0s"
   log = "build-errors.log"
